# arcane-mcp

./: .gitignore  AGENTS.md  README.md  SCENARIOS.md  pyproject.toml
.forgejo/workflows/: ci.yml
.skills/arcane-mcp/: SKILL.md
src/arcane_mcp/: __init__.py  safety.py  server.py
src/arcane_mcp/tools/: __init__.py  activities.py  containers.py  environments.py  images.py  networks.py  operations.py  projects.py  registries.py  system.py  updater.py  volumes.py  vulnerabilities.py  webhooks.py
src/opencode_arcane_mcp/: client.py  server.py
src/opencode_arcane_mcp/tools/: containers.py  images.py  networks.py  ports.py  projects.py  registries.py  system.py  updater.py  volumes.py  vulnerabilities.py  webhooks.py
tests/: conftest.py  test_client.py  test_safety.py
tests/test_tools/: test_containers.py  test_environments.py  test_images.py  test_networks.py  test_projects.py  test_system.py  test_volumes.py  test_webhooks.py
