[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_arcane_mcp"]

[project]
name = "opencode-arcane-mcp"
version = "0.3.0"
description = "MCP server for Docker management via the Arcane API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["mcp", "arcane", "docker", "opencode"]
authors = [
    { name = "splaq" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=3.3.1",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["B904"]  # raise-within-try is intentional for MCP error pattern

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
follow_imports = "silent"
disable_error_code = ["type-arg"]

[project.urls]
Homepage = "https://github.com/getarcaneapp/arcane"
Repository = "https://github.com/splaq/opencode-arcane-mcp"

[project.scripts]
opencode-arcane-mcp = "opencode_arcane_mcp.server:main"
